// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FormError snapshots with default props 1`] = `
<div>
  Text
</div>
`;

exports[`Component: FormError snapshots with error props 1`] = `
<div>
  Text
  <p
    class="sc-bcHOTY kfJkp sc-gsMHZj cioUri"
    variant="xs"
  >
    Error text
  </p>
</div>
`;
